<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3EFF5"
    tools:context=".Unidad2">

    <TextView
        android:id="@+id/lblPuntos2"
        android:layout_width="109dp"
        android:layout_height="29dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="@string/puntos"
        android:textColor="#0D0A0B"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/txtPuntosCantidad2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPuntosCantidad2"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textColor="#0D0A0B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSiguiente2"
        android:layout_width="147dp"
        android:layout_height="51dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="#55DBCB"
        android:onClick="siguiente2"
        android:text="@string/siguiente"
        android:textColor="#0D0A0B"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/lblRubrica"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="139dp"
        android:text="@string/rubrica2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSiguiente2" />

    <TextView
        android:id="@+id/lblPregunta2"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="27dp"
        android:text="@string/UT2"
        android:textColor="#0D0A0B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="113dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPregunta2">

        <RadioButton
            android:id="@+id/rbString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoString"
            android:textColor="#0D0A0B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbInt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoInt"
            android:textColor="#0D0A0B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbBoolean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoBoolean"
            android:textColor="#0D0A0B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbDouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoDouble"
            android:textColor="#0D0A0B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipoChar"
            android:textColor="#0D0A0B"
            android:textSize="20sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>